--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         template: '@asyncapi/html-template@0.23.0'  #In case of template from npm, because of @ it must be in quotes
         filepath: asyncapi.yaml
-        parameters: baseHref=/tt-notif-service/ sidebarOrganization=byTags #space separated list of key/values
+        parameters: baseHref=/tt-notif-service/ #space separated list of key/values
         output: generated-html
       
     #Using another action that takes generated HTML and pushes it to GH Pages
